<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_yellow"
    tools:context="com.javaproject.malki.projectstepone.controller.Register">
    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="481dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/headlineRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/app_theme_dark_red"
            android:textSize="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/First_Name"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Last_Name"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/ID"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/mail"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Credit_Card"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Confirm_Password"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/enterFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/First_Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/enterLastName"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/Last_Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/enterID"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/ID"
                    android:inputType="number"
                    android:maxEms="9"
                    android:minEms="9" />

                <EditText
                    android:id="@+id/enterPhone"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxEms="10"
                    android:minEms="10" />

                <EditText
                    android:id="@+id/enterMail"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/enterCredit"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/Credit_Card"
                    android:inputType="number"
                    android:minEms="10" />

                <EditText
                    android:id="@+id/enterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/passwordEx"
                    android:inputType="textWebPassword"
                    android:maxEms="10"
                    android:minEms="8" />
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/passwordEx"
                    android:inputType="textWebPassword"
                    android:maxEms="10"
                    android:minEms="8" />
            </LinearLayout>
        </LinearLayout>

        <RadioButton
            android:id="@+id/isAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/app_theme_gray"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
