<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_yellow"
    tools:context="com.javaproject.malki.projectstepone.controller.AddModel">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="478dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/headlineAddModel"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.3"
            android:text="@string/addModel"
            android:textAlignment="center"
            android:textColor="@color/app_theme_dark_red"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="5"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/company"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/model"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/modelType"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/engine_volume"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/gear"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/limitMileage"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/Trunk_Width"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/Trunk_Height"
                    android:textSize="20dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:text="@string/Number_Of_Seats"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Air_Conditioning"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Safety_System"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/Pullution_Level"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/addModel_enterCompany"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"

                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/addModel_enterModel"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/model"
                    android:autoSizeMinTextSize="10dp"

                    />

                <EditText
                    android:id="@+id/addModel_enterModelType"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/modelType"
                    android:inputType="text"
                    android:autoSizeMinTextSize="10dp"
                     />

                <Spinner
                    android:id="@+id/addModel_enterColor"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:spinnerMode="dialog"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/addModel_enterVolume"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/engine_volume"
                    android:autoSizeMinTextSize="10dp"
                    android:inputType="number"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gearAuto"
                        android:textAlignment="center"/>
                    <Switch
                        android:id="@+id/addModel_isGear"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center"
                         />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gearHand"
                        android:textAlignment="center"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:orientation="horizontal">
                    <Switch
                        android:id="@+id/addModel_isMileage"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.30"
                        />
                    <!--if the switch is on the number picker is visible-->
                    <EditText
                        android:id="@+id/addModel_enterMileage"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/mileage"
                        android:inputType="number"
                        android:autoSizeMinTextSize="10dp"
                        android:enabled="false" />
                </LinearLayout>

                <EditText
                    android:id="@+id/addModel_enterTrunkWidth"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/Trunk_Width"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/addModel_enterTrunkHeight"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/Trunk_Height"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/addModel_enterSeats"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.7"
                    android:hint="@string/Number_Of_Seats"
                    android:inputType="number"
                     />

                <RadioButton
                    android:id="@+id/addModel_isAir"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <Switch
                        android:id="@+id/addModel_isSafety"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        />
                    <!--if the switch is on the number picker is visible-->
                    <Spinner
                        android:id="@+id/addModel_systemType"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/addModel_pollutionLevel"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:max="15"
                    android:min="1"
                    ></SeekBar>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/addModel_addModel"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:text="@string/add"
            android:textColor="@color/app_theme_gray"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
